Bug 76366 - [Blackberry] Non-supported about: operations never stops loading
Summary: [Blackberry] Non-supported about: operations never stops loading
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Platform (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nobody
URL:
Keywords:
Depends on:
Blocks: 73144
  Show dependency treegraph
 
Reported: 2012-01-15 22:27 PST by Chris.Guan
Modified: 2012-02-06 08:39 PST (History)
5 users (show)

See Also:


Attachments
Patch (5.34 KB, patch)
2012-02-05 20:03 PST, Chris.Guan
no flags Details | Formatted Diff | Diff
Patch (13.27 KB, patch)
2012-02-05 20:09 PST, Chris.Guan
no flags Details | Formatted Diff | Diff
Patch (5.33 KB, patch)
2012-02-05 21:19 PST, Chris.Guan
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Chris.Guan 2012-01-15 22:27:45 PST
If user typed the non-supported "about:" scheme such as "about:nonsupport", we should take it as an error of invalid url.
Comment 1 Chris.Guan 2012-02-05 20:03:01 PST
Created attachment 125554 [details]
Patch
Comment 2 Chris.Guan 2012-02-05 20:09:14 PST
Created attachment 125556 [details]
Patch
Comment 3 Antonio Gomes 2012-02-05 20:33:03 PST
Comment on attachment 125556 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=125556&action=review

you amended wrongly :-)

> Source/WebCore/ChangeLog:8
> +        If user typed the non-supported "about:" scheme such as "about:nonsupport", 

nit: s/the/a

> Source/WebCore/ChangeLog:9
> +        loadAboutURL() fucntion in NetworkManger should recognize and handle

typo: function*

> Source/WebCore/ChangeLog:33
> +2012-02-05  Andreas Kling  <awesomekling@apple.com>
> +
> +        Remove unused file MappedAttributeEntry.h.
> +        <http://webkit.org/b/77841>
> +
> +        Reviewed by Anders Carlsson.
> +
> +        * GNUmakefile.list.am:
> +        * WebCore.gypi:
> +        * WebCore.vcproj/WebCore.vcproj:
> +        * WebCore.xcodeproj/project.pbxproj:
> +        * dom/MappedAttributeEntry.h: Removed.
> +        * dom/StyledElement.h:
> +

this should not be here :-)
Comment 4 Chris.Guan 2012-02-05 21:19:32 PST
Created attachment 125562 [details]
Patch
Comment 5 Antonio Gomes 2012-02-05 21:23:24 PST
Comment on attachment 125562 [details]
Patch

It looks ok to me...

maybe our DRT support testing this, Rob?
Comment 6 Chris.Guan 2012-02-05 21:47:51 PST
(In reply to comment #5)
> (From update of attachment 125562 [details])
> It looks ok to me...
> 
> maybe our DRT support testing this, Rob?

Thanks, Antonio, do you want DRT to run all schemata such as "data: about: credits: cache: config: ..."?
Comment 7 Antonio Gomes 2012-02-06 05:23:45 PST
(In reply to comment #6)
> (In reply to comment #5)
> > (From update of attachment 125562 [details] [details])
> > It looks ok to me...
> > 
> > maybe our DRT support testing this, Rob?
> 
> Thanks, Antonio, do you want DRT to run all schemata such as "data: about: credits: cache: config: ..."?

hum, not sure. I would actually like to ensure that any other schemas other than the supported ones load as expected: error page :)
Comment 8 Chris.Guan 2012-02-06 05:47:48 PST
(In reply to comment #7)
> (In reply to comment #6)
> > (In reply to comment #5)
> > > (From update of attachment 125562 [details] [details] [details])
> > > It looks ok to me...
> > > 
> > > maybe our DRT support testing this, Rob?
> > 
> > Thanks, Antonio, do you want DRT to run all schemata such as "data: about: credits: cache: config: ..."?
> 
> hum, not sure. I would actually like to ensure that any other schemas other than the supported ones load as expected: error page :)

yes, an invalide url err page will be shown up if that schema is not supported by us:)
Comment 9 Rob Buis 2012-02-06 06:55:31 PST
(In reply to comment #5)
> (From update of attachment 125562 [details])
> It looks ok to me...
> 
> maybe our DRT support testing this, Rob?

The code looks fine to me too. I'll check whether DRT supports about:
Cheers,

Rob.
Comment 10 Chris.Guan 2012-02-06 06:57:48 PST
(In reply to comment #9)
> (In reply to comment #5)
> > (From update of attachment 125562 [details] [details])
> > It looks ok to me...
> > 
> > maybe our DRT support testing this, Rob?
> 
> The code looks fine to me too. I'll check whether DRT supports about:
> Cheers,
> 
> Rob.

Thanks, Rob:)
Comment 11 Rob Buis 2012-02-06 07:16:27 PST
Comment on attachment 125562 [details]
Patch

The code looks fine. Can you make a unit test for this, since DRT is not suitable here?
Comment 12 WebKit Review Bot 2012-02-06 08:39:40 PST
Comment on attachment 125562 [details]
Patch

Clearing flags on attachment: 125562

Committed r106810: <http://trac.webkit.org/changeset/106810>
Comment 13 WebKit Review Bot 2012-02-06 08:39:45 PST
All reviewed patches have been landed.  Closing bug.