[Blackberry] Non-supported about: operations never stops loading https://bugs.webkit.org/show_bug.cgi?id=76366

Patch by Chris Guan <chris.guan@torchmobile.com.cn> on 2012-02-06
Reviewed by Rob Buis.

If user typed a non-supported "about:" scheme such as "about:nonsupport",
the loadAboutURL() function in NetworkManger should recognize and handle it as
an error of invalid url.

* platform/network/blackberry/NetworkJob.cpp:
(WebCore::NetworkJob::loadAboutURL):
(WebCore::NetworkJob::handleAbout):
* platform/network/blackberry/NetworkJob.h:
(NetworkJob):
* platform/network/blackberry/NetworkManager.cpp:
(WebCore::NetworkManager::startJob):

Canonical link: https://commits.webkit.org/94744@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@106810 268f45cc-cd09-0410-ab3c-d52691b4dbfc